--- a/deadlock-steamworks/deadlockery/deadlockery.csproj
+++ b/deadlock-steamworks/deadlockery/deadlockery.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Generated\" />
+    <ProjectReference Include="..\DeadlockAPI\DeadlockAPI.csproj" />
   </ItemGroup>
 
 </Project>
