--- a/deadlock-steamworks/deadlockery/DeadlockAPIExample.csproj
+++ b/deadlock-steamworks/deadlockery/DeadlockAPIExample.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="SharpCompress" Version="0.37.2" />
     <PackageReference Include="SteamKit2" Version="2.5.0" />
   </ItemGroup>
 
